--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,25 @@
 * {
+  box-sizing: border-box;
+}
 
-    box-sizing: border-box;
-    
-    }
-    
-    body{
-      font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    line-height: normal;
-    font-weight: 400;
-    }
-    
-    .heading-text {
-    color: var(--Text, #00303C);
-    font-size: 24px;
-    font-weight: 500;
-    letter-spacing: 0.72px;
-    }
+body {
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+  font-weight: 400;
+}
+
+.heading-text {
+  color: var(--Text, #00303c);
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 0.72px;
+}
+
+.history-msg {
+  border-radius: 8px;
+  background: #f4f7ff;
+  padding: 10px;
+  margin: 10px 0px;
+}
